--- a/notebook/W1_S1.ipynb
+++ b/notebook/W1_S1.ipynb
@@ -42,10 +42,10 @@
       "execution_count": 2,
       "metadata": {
         "id": "UnkVUYJGuS0o",
-        "outputId": "c7e6ba8a-a6cc-4c40-d9f0-3678b7781daf",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c7e6ba8a-a6cc-4c40-d9f0-3678b7781daf"
       },
       "outputs": [
         {
@@ -88,10 +88,10 @@
       "execution_count": 3,
       "metadata": {
         "id": "KYktPlnXvyaZ",
-        "outputId": "619122f6-5fcf-4ff1-ba38-cf963db9c011",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "619122f6-5fcf-4ff1-ba38-cf963db9c011"
       },
       "outputs": [
         {
@@ -128,10 +128,10 @@
       "execution_count": 4,
       "metadata": {
         "id": "dH7uOieswQ_t",
-        "outputId": "1202441a-2658-4792-ae7d-6d5370959914",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "1202441a-2658-4792-ae7d-6d5370959914"
       },
       "outputs": [
         {
@@ -161,7 +161,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 7,
       "metadata": {
         "id": "xreaix9UpPl9"
       },
@@ -240,24 +240,38 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
-        "id": "5rdfnOhSyGK3"
+        "id": "5rdfnOhSyGK3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d0065cc8-f866-419b-998d-1d3949ee1a48"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['This is my first I/O exercise.\\n']\n",
+            "['This is my first I/O exercise.\\n', 'I just remembered that pi is approximately 3.1416 3.1415926536\\n', 'Writing this to this file\\n', 'is a piece of cake!\\n']\n"
+          ]
+        }
+      ],
       "source": [
         "import math\n",
         "# Hints: Please don't remove the \\n that your TA carefully put in the code!\n",
         "with open('ans.txt', 'w', encoding=\"utf-8\") as fhandler:\n",
         "  fhandler.write('This is my first I/O exercise.\\n')\n",
-        "\n",
-        "with open(________, '__', encoding=\"utf-8\") as fhandler:\n",
+        "# w is for writting mode\n",
+        "with open('ans.txt', 'r+', encoding=\"utf-8\") as fhandler:\n",
         "  print(fhandler.readlines())\n",
+        "  # fhandler.readline is for reading all the lines contained in the file\n",
         "  # Your TA would like accuracy to the fourth decimal here.\n",
-        "  firstline = f'____________________________ {math.pi:._f}\\n'\n",
-        "  secondline = '_____________________________\\n'\n",
-        "  thirdline = '___________________________\\n'\n",
-        "  fhandler.writelines([___,____,___])\n",
+        "  firstline = f'I just remembered that pi is approximately 3.1416 {math.pi:.10f}\\n'\n",
+        "  secondline = 'Writing this to this file\\n'\n",
+        "  thirdline = 'is a piece of cake!\\n'\n",
+        "  fhandler.writelines([firstline,secondline,thirdline])\n",
         "  # Go to the beginning of file\n",
         "  fhandler.seek(0)\n",
         "  # Print the content of file\n",
